_sass/_header.scss
header {
  background: $primary-color;
  box-sizing: border-box;
  clear: both;
  display: block;
  float: left;
  padding: 40px 20px;
  position: relative;
  width: 100%;

  @media only screen and (min-width: 1600px) {
    width: 25%;
  }

  @media only screen and (min-width: 1024px) {
    bottom: 0;
    left: 0;
    overflow: auto;
    padding: 0;
    position: fixed;
    top: 0;
    width: 30%;
    z-index: 10;
  }

  @media only screen and (min-width: 768px) {
    padding: 80px 40px;
  }
}

.header-image {
  background-image: url("/assets/img/portfolio.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  bottom: 0;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: opacity 0.4s ease-in-out;

  &.header-image--on {
    opacity: 1;
  }
}

.header-overlay {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(22, 27, 33, 0.7);

  @media only screen and (min-width: 1024px) {
    background: -moz-linear-gradient(
      top,
      rgba(22, 27, 33, 0) 0,
      rgba(22, 27, 33, 0.01) 1%,
      rgba(22, 27, 33, 0.7) 70%,
      rgba(22, 27, 33, 0.7) 100%
    );
    background: -webkit-linear-gradient(
      top,
      rgba(22, 27, 33, 0) 0,
      rgba(22, 27, 33, 0.01) 1%,
      rgba(22, 27, 33, 0.7) 70%,
      rgba(22, 27, 33, 0.7) 100%
    );
    background: linear-gradient(
      to bottom,
      rgba(22, 27, 33, 0) 0,
      rgba(22, 27, 33, 0.01) 1%,
      rgba(22, 27, 33, 0.7) 70%,
      rgba(22, 27, 33, 0.7) 100%
    );
  }
}

.header-content {
  color: #fff;
  position: relative;

  @media only screen and (min-width: 1024px) {
    bottom: 0;
    padding: 40px 40px 34px;
    position: absolute;
  }

  a.header-title {
    color: #fff;
    font-family: Merriweather, sans-serif;
    font-size: 25px;
    font-weight: 400;
    letter-spacing: 0;
    line-height: 1;
    text-decoration: none;

    @media only screen and (min-width: 1220px) {
      font-size: 35px;
    }

    @media only screen and (min-width: 768px) {
      font-size: 30px;
    }
  }

  p {
    color: rgba(255, 255, 255, 0.7);
    font-family: Raleway, sans-serif;
    font-size: 16px;
    font-weight: 400;
    letter-spacing: 0;
    line-height: 1.5;
    margin-top: 10px;

    @media only screen and (min-width: 1220px) {
      font-size: 18px;
    }

    @media only screen and (min-width: 768px) {
      font-size: 17px;
    }
  }

  nav {
    @media only screen and (min-width: 1220px) {
      margin-top: 30px;
    }

    @media only screen and (min-width: 1024px) {
      margin-top: 20px;
    }

    a {
      line-height: 1.6;
    }
  }

  ul {
    margin: 0;
    padding: 0;
  }

  li {
    list-style: none;

    &.current a {
      color: #fff;
    }
  }

  a {
    color: rgba(255, 255, 255, 0.7);
    font-family: Raleway, sans-serif;
    font-size: 18px;
    font-weight: 400;

    &:hover {
      color: #fff;
    }
  }

  .socials {
    list-style: none;
    margin: 0;
    padding: 0;

    @media only screen and (min-width: 1220px) {
      margin-top: 35px;
    }

    @media only screen and (min-width: 1024px) {
      margin: 27px 0 0;
      padding: 0;
    }

    @media only screen and (min-width: 768px) {
      padding: 10px 0 0;
    }

    li {
      display: inline-block;
      margin-left: 2px;

      &:first-child {
        margin-left: 0;
      }
    }

    a {
      background: #abb7b7;
      background: rgba(255, 255, 255, 0.7);
      border-radius: 100%;
      color: #161b21;
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 17px;
      height: 30px;
      line-height: 1;
      position: relative;
      width: 30px;

      @media only screen and (min-width: 768px) {
        font-size: 20px;
        height: 40px;
        width: 40px;
      }

      &:hover {
        background: #fff;
      }
    }
  }
}

